fixing colour contrast. Updating nav and about styles

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2rem;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1rem;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5rem;}sub{bottom:-.25rem;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35rem .625rem .75rem;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
 input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
 
  .clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; } 
@@ -10,25 +10,25 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
  }
 
  html {
- 	font-size: 16px;
+ 	font-size: 18px;
  }
 
  body {
- 	font-size: 1em;
+ 	font-size: 1rem;
   background: #fff;
   font-family: 'Quattrocento Sans', sans-serif;
  }
 
  .top {
   width: 100%;
-  height: 121px;
-  background: rgb(123,215,194);
+  background: #32a389;
+  height: 90px;
  }
 
  nav {
   width: 100%;
-  padding: 50px 0 20px;
-  background: rgba(123,215,194,0.8);
+  padding: 30px 0 20px;
+  background: #32a389;
   position: fixed;
   color: #fff;
   z-index: 1;
@@ -36,7 +36,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
  nav img {
   position: absolute;
-  top: 32px;
+  top: 16px;
   left: 20px;
  }
 
@@ -54,16 +54,23 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
  
  nav ul li {
-  font-size: 0.80em;
+  font-size: 1rem;
   display: inline-block;
   border-bottom: 2px solid rgba(0, 0, 0, 0.0);
   text-align: center;
+  margin: 0 5px;
+ }
+
+ nav ul li:first-child {
+   margin-left: 0;
+ }
+
+ nav ul li:last-child {
+   margin-right: 0;
  }
 
  nav ul li a {
   display: block;
-  width: 60px;
-  height: 32px;
   padding-bottom: 15px;
   text-decoration: none;
   color: #fff;
@@ -74,11 +81,11 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
  nav ul li:hover {
   text-shadow: 1px 1px 0 #9cb6b0;
   border-bottom: 2px solid #fff;
-  color: #7bd7c2;
+  color: #32a389;
  }
 
  nav ul li a:active {
-  color: #7bd7c2;
+  color: #32a389;
  }
 
  nav ul li a:visited {
@@ -126,7 +133,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 .content .overlay p {
   margin-top: calc(50% - 19px);
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-family: "Quattrocento Sans", sans-serif;
   line-height: 20px;
 }
@@ -144,7 +151,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 }
 
 .overlay p:last-child {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   margin-top: 20px;
   font-style: italic;
 }
@@ -160,7 +167,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 footer {
   clear: both;
-  background: #7bd7c2;
+  background: #32a389;
   width: 100%;
   height: 100px;
   color: #fff;
@@ -197,8 +204,17 @@ footer p {
 }
 
 @media (max-width: 400px) {
-  nav ul li {
-    font-size: 1.0em;
+  nav img {
+    position: initial;
+    display: block;
+    margin: 0 auto 10px;
+  }
+
+  nav ul {
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: center;
+    width: calc(100% - 10px);
   }
 
   .gallery {
@@ -208,28 +224,9 @@ footer p {
   }
 }
 
-@media (max-width: 375px) {
-  nav img {
-    left: 0;
-  }
-
-  nav ul {
-    padding-left: 45px;
-  }
-}
-
-
-
-
-
-
-
-
-
-
 /*CSS modal*/
 .image-source-link {
-  color: #98C3D1;
+  color: #32a389;
 }
 
 .mfp-with-zoom .mfp-container,
@@ -250,7 +247,7 @@ footer p {
     opacity: 0.8;
 }
 
-.mfp-with-zoom.mfp-removing .mfp-container, 
-.mfp-with-zoom.mfp-removing.mfp-bg {
+.mfp-with-zoom.mfp-rremoving .mfp-container, 
+.mfp-with-zoom.mfp-rremoving.mfp-bg {
   opacity: 0;
 }
